welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:1: error: reassignment to val
def lastDigit(a:Int, b:Int):Boolean = {while (a>9) {a=a%10}
                                                     ^lastDigit:2: error: reassignment to val
                                       while (b>9) {b=b%10}
                                                     ^