welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {while (a>9) {a=a%10}
                                       while (b>9) {b=b%10}
                                       return a==b}